--- a/Config/printtrace_tu_dortmund.config
+++ b/Config/printtrace_tu_dortmund.config
@@ -33,7 +33,7 @@ COLS 2048
 PrintGraphs false
 PrintPreTrace true
 PreTraceFile nvmain.nvt
-PreTraceWriter
+PreTraceWriter ESWeekTraceWriter
 ;EchoPreTrace true
 ;PeriodicStatsInterval 10000000
 UseRefresh false
